# verification

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.gui  GUI_QUICKSTART.md  IMPLEMENTATION_SUMMARY_GROUPS_UI.md  Makefile  README.md  VerificationFlowDiagram.md  add_flight_declaration.py  docker-compose.gui.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_verification.py
.github/workflows/: main.yml
config/: default.yaml  pull_request.yaml
config/bern/: blue_sky_sim_bern.scn  blue_sky_sim_example.scn  flight_declaration_via_operational_intent.json  geo_fence.geojson  telemetry_f1.json  telemetry_f2.json  telemetry_f3.json  telemetry_f4.json  telemetry_f5.json  trajectory_f1.json  trajectory_f5.json
config/edmonton/: bluesky_a1_head_on.scn  bluesky_a1_head_on.yaml  bluesky_a2_crossing.scn  bluesky_a3_overtake.scn  bluesky_b1_multi_intruder.scn  bluesky_b2_staggered.scn  bluesky_b2_staggered.yaml  bluesky_b3_swarm.scn  bluesky_c1_shared_intruder.scn  bluesky_c2_multi_ownship.scn  flight_declaration_a1_head_on.json  flight_declaration_a2_crossing.json  flight_declaration_a3_overtake.json  flight_declaration_b1_multi_intruder.json  flight_declaration_b2_staggered.json  flight_declaration_b3_swarm.json  flight_declaration_c1_ownship_alpha.json  flight_declaration_c1_ownship_bravo.json  flight_declaration_c2_ownship_alpha.json  flight_declaration_c2_ownship_bravo.json  flight_declaration_c2_ownship_charlie.json  trajectory_a1_head_on_ownship.json  trajectory_a2_crossing_ownship.json  trajectory_a3_overtake_ownship.json  trajectory_b1_multi_intruder_ownship.json  trajectory_b2_staggered_ownship.json  trajectory_b3_swarm_ownship.json  trajectory_c1_ownship_alpha.json  trajectory_c1_ownship_bravo.json  trajectory_c2_ownship_alpha.json  trajectory_c2_ownship_bravo.json  trajectory_c2_ownship_charlie.json
config/local/: README.md
docs/: daa_scenario_authoring_guide.md  index.md
docs/scenarios/: F1_flow_no_telemetry_with_user_input.md  F1_happy_path.md  F2_contingent_path.md  F3_non_conforming_path.md  F5_non_conforming_path.md  add_flight_declaration.md  geo_fence_upload.md  opensky_live_data.md  openutm_sim_air_traffic_data.md  sdsp_heartbeat.md  sdsp_track.md  sdsp_verify_sensor_failure_report.md  verify_sdsp_metrics.md
dummy_oauth_infrastructure/: dummy_oauth.py
examples/: conditional_execution.md  conditional_workflow_demo.yaml  fire_response.md  loop_examples.yaml  loops.md  test_fire_response.py  workflow_features.md
flight_blender_e2e_integration/: README.md  add_flight_declaration.py  auth_factory.py  dss_rid_qualifier_track_uploader.py  get_access_token.py  import_flight_json_locally.py  import_rid_sample_data.py  import_rid_sample_data_utm_adapter.py  opensky_live_data.py  submit_signed_telemetry.py  upload_geo_fence.py
flight_blender_e2e_integration/aoi_geo_fence_samples/: geo_fence.geojson
flight_blender_e2e_integration/conformance_tests/: README.md  run_f1_flow.py  run_f2_flow.py  run_f3_flow.py
flight_blender_e2e_integration/simulator/: README.md  adjacent_circular_flights_simulator.py  config.json  requirements.txt
scenarios/: F1_flow_no_telemetry_with_user_input.yaml  F1_happy_path.yaml  F2_contingent_path.yaml  F3_non_conforming_path.yaml  F5_non_conforming_path.yaml  README.md  add_flight_declaration.yaml  bayesian_sim_air_traffic_data.yaml  bayesian_sim_air_traffic_data_varying_refresh_rates.yaml  bluesky_sim_air_traffic_data.yaml  bluesky_sim_air_traffic_data_latency_issues.yaml  bulk_add_flight_declaration.yml  bulk_add_flight_declarations.yaml  daa_a1_head_on_cooperative.yaml  daa_a2_crossing_cooperative.yaml  daa_a3_overtake_cooperative.yaml  daa_b1_multi_intruder_cooperative.yaml  daa_b2_staggered_arrival_cooperative.yaml  daa_b3_intruder_swarm_cooperative.yaml  daa_c1_two_ownships_shared_intruder_cooperative.yaml  daa_c2_three_ownships_multi_intruder_cooperative.yaml  f3442_T01_verify_basic_alerting.yml  f3623_T02_bayesian_traffic_w_random_refresh.yaml  opensky_live_data.yaml  openutm_sim_air_traffic_data.yaml  sdsp_heartbeat.yaml  sdsp_track.yaml  stream_air_traffic_example.yaml  verify_sdsp_metrics.yaml
scenarios/airtraffic-simulations/: bayesian_sim_air_traffic_data.yaml  bayesian_sim_air_traffic_data_varying_refresh_rates.yaml  bluesky_sim_air_traffic_data.yaml  bluesky_sim_air_traffic_data_latency_issues.yaml  opensky_live_data.yaml  openutm_sim_air_traffic_data.yaml
scenarios/daa-f3442/: daa_a1_head_on_cooperative.yaml  daa_a2_crossing_cooperative.yaml  daa_a3_overtake_cooperative.yaml  daa_b1_multi_intruder_cooperative.yaml  daa_b2_staggered_arrival_cooperative.yaml  daa_b3_intruder_swarm_cooperative.yaml  daa_c1_two_ownships_shared_intruder_cooperative.yaml  daa_c2_three_ownships_multi_intruder_cooperative.yaml  daa_cap100_bluesky.yaml  (+2 more)
scripts/: add_flight_declaration.py  amqp_consumer.py  build.sh  cleanup.sh  common.sh  dss_rid_uploader.py  generate_docs.py  generate_editor_metadata.py  get_access_token.py  import_rid_data.py  import_rid_data_utm_adapter.py  run.sh  submit_signed_telemetry.py  upload_geo_fence.py
tests/: .env.tests  README.md  conftest.py  docker-compose.fb.yml  redis.conf  test_allure_reporter.py  test_altitude_units.py  test_bluesky_scenario.py  test_client_settings.py  test_client_steps.py  test_conditions.py  test_config_redaction.py  test_continue_on_error_integration.py  test_flight_blender_base_client.py  test_flight_phase.py  test_group_execution.py  test_http_collector.py  test_loops.py  test_reporting_output.py  test_scenario_docs_check.py  test_scenario_integration.py  test_scenarios.py  test_server_main.py  test_step_status_updates.py  test_stream_air_traffic.py  test_suite_scenario_merge.py  test_ui_groups.py  test_yaml_scenarios.py
web-editor/: CONFIG_EDITOR_IMPLEMENTATION.md  README.md  README_GROUPS.md  README_GROUP_VISUALIZATION.md  async_implementation_guide.md  index.html  package-lock.json  package.json  vite.config.ts
(+508 files in other folders)
