[project]
name = "openutm-verification"
version = "0.1.0"
description = "Verification tools for Flight Blender and OpenUTM products"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.32.4",
    "arrow==1.3.0",
    "python-dotenv==1.0.1",
    "http-sfv==0.9.9",
    "cryptography==44.0.3",
    "jwt==1.3.1",
    "http-message-signatures==0.5.0",
    "redis==6.0.0",
    "walrus==0.9.4",
    "jwcrypto==1.5.6",
    "pyproj",
    "shapely",
    "implicitdict",
    "uas-standards",
    "geojson",
    "dacite",
    "folium>=0.20.0",
    "faker>=37.4.2",
    "pandas>=2.3.1",
    "pydeck>=0.9.1",
    "pythreejs>=2.4.2",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "earcut>=1.1.5",
    "pika>=1.3.2",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
